add skeleton views and routes

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,7 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  a(href = "/about") about me
+  a(href = "/resume") resume
+  a(href = "/projects")  projects 
+  a(href = "/contact")  contact me
