--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,5 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='https://fonts.googleapis.com/css2?family=Pattaya&display=swap')
+    link(rel='stylesheet' , href='https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap')
   body
     block content
