--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,12 +21,22 @@ h1 {
 
 }
 
-/* p {
-  color: #BA5624;
+h2 {
+  color: var(--blue);
+  font-size: 60px;
+  font-family: 'Oswald', sans-serif;
+}
+
+p {
+  color: var(--pink);
   font-size: 25px;
   text-align: center;
-  font-family: 'Montserrat Alternates', sans-serif;
-} */
+  font-family: 'Oswald', sans-serif;
+}
+
+pre{
+  color: var(--pink);
+}
 
 a {
   color: var(--yellow);
