add linkedin and email contact

--- a/views/contact.pug
+++ b/views/contact.pug
@@ -1,1 +1,6 @@
 extends layout
+
+block content
+  h1= title
+  a(href='mailto:srquinn1@gmail.com') email me
+  a(href= 'https://www.linkedin.com/in/shannon-quinn-2b7325150/') linkedin
