finished resume page

--- a/views/resume.pug
+++ b/views/resume.pug
@@ -1,3 +1,18 @@
 extends layout
+
 block content
+  br
+  br
+  button(onclick='printResume()') print
+  script(src='/javascripts/print.js')
+  
+  a(href='/images/resume.jpg' download) download
+
+  br
+  br
+  br
   img(src= "/images/resume.jpg" alt="resume" style="width:600px;height700px")
+
+  
+  
+  
