--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -38,6 +38,10 @@ pre{
   color: var(--pink);
 }
 
+img{
+  vertical-align: middle;
+}
+
 a {
   color: var(--yellow);
   height: 50px;
@@ -55,6 +59,29 @@ a {
 
 a:hover,
 a:focus {
+  border: 3px solid var(--blue);
+  box-shadow: 0 0 10px 0 var(--blue) inset, 0 0 10px 4px var(--blue)
+}
+
+button {
+  color: var(--yellow);
+  background-color: var(--offblack);
+  height: 50px;
+  width: 105px;
+  padding-top: 5.5px;
+  padding-bottom: 50px;
+  font-family: 'Oswald', sans-serif;
+  border: 3px solid var(--pink);
+  font-size: 25px;
+  text-align: center;
+  display: inline-block;
+  margin-left:10px;
+  margin-right:10px;
+  border-radius: 4px;
+}
+
+button:hover,
+button:focus {
   border: 3px solid var(--blue);
   box-shadow: 0 0 10px 0 var(--blue) inset, 0 0 10px 4px var(--blue)
 }
